# zaiv_application_autonomous_car

./: README.md  mintty.exe.stackdump
node-red-contrib-zaiv/: LICENSE  README.md  package-lock.json  package.json  package.json.bak  reinstall.sh  zaiv_parser_metadata.html  zaiv_parser_metadata.js  zaivcmd.md  zaivmessage.html  zaivmessage.js  zaivws.html  zaivws.js
node-red-contrib-zaiv/examples/: coffeemachine.json
node-red-setting/: README.md  flows.json  zaiv_stream_server.js  zaiv_viewer_no_internet.html
zaiv_application/: .gitignore  CMakeLists.txt  README.md  zaiv_application copy.cfg  zaiv_application.cfg
zaiv_application/hefs/: track0110.hef  track_kss.hef  trash_231218.hef  trash_no_nms_231218.hef
zaiv_application/hefs/jeon/: trash.json  trash_1218.hef
zaiv_application/samples/: corns.mov
zaiv_application/src/: configuration.cpp  configuration.h  main - 범위지정.cpp.bak  main.cpp  main.cpp.bak  main_copy_jeon.cpp
zaiv_application/src/extlibs/: rapidjson.cmake
zaiv_application/src/interfaces/json/: JSONBase.cpp  JSONBase.h
zaiv_application/src/interfaces/websocket/: asio_compatibility.hpp  client_ws.hpp  client_wss.hpp  crypto.hpp  server_ws.hpp  server_wss.hpp  utility.hpp
zaiv_application/src/postprocess/common/: nms.hpp  tensors.hpp
zaiv_application/src/postprocess/config/: default_configs.hpp
zaiv_application/src/postprocess/mobilenet/: mobilenet_ssd.cpp  mobilenet_ssd.hpp
zaiv_application/src/postprocess/yolo/: yolo_output.hpp  yolo_postprocess.cpp  yolo_postprocess.hpp
zaiv_application/utils/: hailo_eth_commands.txt
